# Sketchy

./: .gitignore  .gitmodules  TODO
app/sketchy/: layer.cpp  layer.h  page.cpp  page.h  pageview.cpp  pageview.h  sketchy.cpp  sketchy.h  stroke.cpp  stroke.h  strokeshader.cpp  strokeshader.h
cross/: Camera.cpp  Camera.h  Framebuffer.h  Framebuffer.mm  Geometry.cpp  Geometry.h  Loop.h  Material.cpp  Material.h  MultisampleFramebuffer.cpp  MultisampleFramebuffer.h  Node.cpp  Node.h  Page.h  Page.mm  Renderer.h  Renderer.mm  Renderer_shadow.mm  Scene.cpp  Scene.h  Shader.cpp  Shader.h  ThreadOwner.cpp  ThreadOwner.h
cross/events/: Event.cpp  Event.h  Fence.cpp  Fence.h
cross/geom/: Arc.cpp
cross/include/: Framebuffer.h  Geometry.h  Node.h  Page.h  Renderer.h  Shader.h  ThreadOwner.h
cross/input/: TouchHandler.cpp  touch.cpp
cross/props/: Flow.cpp  Node.h
cross/shadow/: Framebuffer_shadow.h  Framebuffer_shadow.mm  Page_shadow.h  Page_shadow.mm  Shadow_impl.h
cross/tasks/: Queue.cpp  Task.cpp  Worker.cpp
epoch0/: TODO
epoch1/lab/: .gitignore  common.gypi
epoch1/lab/job/job01/: CMakeLists.txt  boss.cpp  boss.h  boss2.cc  boss2.h  generic_worker.cpp  generic_worker.h  job.h  job_pool.h  jobqueue.h  link.h  queue.cpp  queue.h  queue_inline.h  test_generic_worker.cpp  test_worker.cpp  worker.cc  worker.h  worker2.cc  worker2.h
epoch1/lab/job/job01/core/: link.h  meta.h  padding.h  pool.cpp  pool.h  queue.h  ring.h  schwassert.h  stack.h
epoch1/lab/job/job01/core/impl/: ring_impl.h
epoch1/lab/job/job01/core/tests/: test_link.cpp  test_padding.cpp  test_pool.cpp  test_queue.cpp  test_ring.cpp
epoch1/lab/job/job01/dbg/: dbg.h
epoch1/lab/job/job01/examples/: example_threadloop_signalhandler.cc
epoch1/lab/job/job01/host/: host.h  host.h.in
epoch1/lab/job/job01/impl/: boss_impl.h  job_impl.h  jobpool.h  typedjobx.h
epoch1/lab/job/job01/impl/tests/: test_jobpool.cc
epoch1/lab/job/job01/mem/: align.h  blocks.cc  blocks.h
epoch1/lab/job/job01/mem/impl/: blocks_impl.cc  blocks_impl.h
epoch1/lab/job/job01/mem/tests/: test_blocks.cc
epoch1/lab/job/job01/tests/: CMakeLists.txt  test_jobqueue.cpp  test_link.cpp  test_padding.cpp  test_queue.cpp  test_ring.cpp  test_worker.cc
epoch1/lab/job/job01/thread/: synchronization.h  threadlocal.h  threadloop.cc  threadloop.h  turntaker.cc
epoch1/lab/job/job01/thread/tests/: test_threadloop.cc  test_turntaker.cc
epoch1/lab/job/job01/time/: time_util.h
ios/Sketchy/: AppDelegate.h  AppDelegate.m  EAGLView.h  EAGLView.mm  EAGLViewController.h  EAGLViewController.m  EAGLViewController.mm  EAGLViewController.xib  FirstViewController.h  FirstViewController.m  GLKSceneController.h  GLKSceneController.mm  SchwaGLView.h  SchwaGLView.mm  SchwaGLViewController.h  SchwaGLViewController.mm  SecondViewController.h  SecondViewController.m  SecondViewController.mm  main.m
ios/Sketchy.xcodeproj/: project.pbxproj
ios/SketchyUnitTests/: AppDelegate.h  AppDelegate.m  SketchyUnitTests-Info.plist  ViewController.h  ViewController.mm  main.m
job/: job.cpp  job.h
lab/web/: Makefile  web.gyp
om/: .gitignore
om/Om.xcworkspace/: contents.xcworkspacedata
om/base/: libom_base.cc  libom_base.h  list.cc  list.h
om/docs/: README-gtest  README-xcode
om/io/: libom_io.h  libom_io.m  net.cc  net.h
past/cross/: ThreadOwner.cpp
past/epoch1/lab/job/: CMakeLists.txt
past/epoch1/lab/job/job00/: generic_pool.h  job_impl_create.h  job_pool.cpp  test_generic_pool.cpp
past/epoch1/lab/job/job01/: CMakeLists.txt  README  boss.h  generic_worker.cpp  generic_worker.h  jobdescription.h  jobqueue.h  jobqueue2.h  worker.cc  worker.h  worker2.cc
past/epoch1/lab/job/job01/core/: link.h
past/epoch1/lab/job/job01/core/tests/: test_link.cpp  test_meta.cc  test_queue.cpp
past/epoch1/lab/job/job01/dbg/: dbg.h
past/epoch1/lab/job/job01/docs/: core.html  job01.html
past/epoch1/lab/job/job01/host/: host.h
past/epoch1/lab/job/job01/impl/: boss_impl.h  job_impl.h  jobpool.h  typedjobx.h
past/epoch1/lab/job/job01/mem/: align.h  util.h
past/epoch1/lab/job/job01/tests/: CMakeLists.txt  test_boss.cpp  test_jobqueue.cpp
past/epoch1/lab/job/job01/thread/: turntaker.h
past/epoch1/lab/job/job01/time/: time_util.h
past/tests/: PropertyTest.cpp  ShadowTest.cpp  job_JobPoolTest.cpp  job_QueueTest.cpp  job_WorkerTest.cpp
qi/: qi.cc  qi.h
qi/base/: runner.h  threadrunner.cc  threadrunner.h  timetypes.h  types.h
qi/dbg/: server.cc  server.h
qi/disk/: cache.cc  cache.h  cachetypes.h  sqlitecache.cc  (+1 more)
tests/: FreeListTest.cpp  LoopTest.cpp  PropertyTest.cpp  ShadowTest.cpp  Task_QueueTest.cpp  Task_WorkerTest.cpp  TestTest.cpp  gtest-all.cc  job_JobPoolTest.cpp  job_QueueTest.cpp  job_WorkerTest.cpp  mem_FreeListTest.cpp
(+318 files in other folders)
